--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/rchavarria/nodejs-module-template/issues"
+  },
+  "devDependencies": {
+    "gulp": "~3.8.8"
   }
 }
