--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sinon-chai": "~2.5.0",
     "chai": "~1.9.1",
     "sinon": "~1.10.3",
-    "mocha": "~1.21.4"
+    "mocha": "~1.21.4",
+    "gulp-mocha": "~1.1.0"
   }
 }
